--- a/charts/durabletask-azurestorage-scaler/values.yaml
+++ b/charts/durabletask-azurestorage-scaler/values.yaml
@@ -1,6 +1,6 @@
 # Default names are derived from the name of the chart
-name:
-fullnameOverride:
+name: ""
+fullnameOverride: ""
 
 # Optional additional labels for each Kubernetes resource
 additionalLabels: {}
@@ -34,11 +34,11 @@ upgradeStrategy: {}
 # Container resource requests and limits
 resources:
   requests:
-    cpu: 10m
-    memory: 128Mi
+    cpu: 50m
+    memory: 256M
   limits:
-    cpu: 100m
-    memory: 512Mi
+    cpu: '1'
+    memory: 1G
 
 # Optional node selector for scaler pods
 nodeSelector: {}
