--- a/.github/actions/integration-test/action.yml
+++ b/.github/actions/integration-test/action.yml
@@ -55,8 +55,8 @@ runs:
     - name: Build Function App Image
       shell: bash
       run: |
-        docker build -f "./tests/Keda.Scaler.WebJobs.DurableFunctions.Examples/Dockerfile" -t "functions:${{ github.run_id }}" .
-        kind load docker-image "functions:${{ github.run_id }}"
+        docker build -f "./tests/Keda.Scaler.WebJobs.DurableFunctions.Examples/Dockerfile" -t "example-function-app:${{ github.run_id }}" .
+        kind load docker-image "example-function-app:${{ github.run_id }}"
 
     - name: Install KEDA
       shell: bash
@@ -65,7 +65,7 @@ runs:
         helm repo update
         helm install -n keda --create-namespace keda kedacore/keda --namespace keda
 
-    - name: Install Azurite Chart
+    - name: Install Azurite Helm Chart
       shell: bash
       run: |
         helm install -n azure --create-namespace azurite ./charts/azurite
@@ -73,85 +73,25 @@ runs:
 
     - name: Install Scaler Helm Chart
       shell: bash
-      run: helm install -n ${{ inputs.functionAppNamespace }} --create-namespace --set image.repository=durabletask-azurestorage-scaler --set image.tag=${{ github.run_id }} dtfx-scaler ./charts/durabletask-azurestorage-scaler
+      run: helm install \
+        -n ${{ inputs.functionAppNamespace }} \
+        --create-namespace \
+        --set image.repository=durabletask-azurestorage-scaler \
+        --set image.tag=${{ github.run_id }} \
+        dtfx-scaler \
+        ./charts/durabletask-azurestorage-scaler
 
-    - name: Apply Function App Deployment
+    - name: Install Function App Helm Chart
       shell: bash
-      run: |
-        deploymentFile="deployment.yaml"
-
-        cat > $deploymentFile <<- EOM
-        apiVersion: apps/v1
-        kind: Deployment
-        metadata:
-          name: ${{ inputs.functionAppName }}
-          namespace: ${{ inputs.functionAppNamespace }}
-        spec:
-          selector:
-            matchLabels:
-              app: functions
-          replicas: 0
-          template:
-            metadata:
-              labels:
-                app: functions
-            spec:
-              containers:
-              - name: functions
-                image: functions:${{ github.run_id }}
-                imagePullPolicy: IfNotPresent
-                env:
-                - name: AzureWebJobsStorage
-                  value: ${{ env.AzuriteConnectionString }}
-                - name: AzureFunctionsJobHost__Extensions__DurableTask__HubName
-                  value: ExampleTaskHub
-                resources:
-                  limits:
-                    cpu: "1"
-                    memory: 2G
-                  requests:
-                    cpu: 100m
-                    memory: 500M
-                startupProbe:
-                  failureThreshold: 30
-                  httpGet:
-                    path: /
-                    port: 8080
-                    scheme: HTTP
-                  periodSeconds: 10
-                  successThreshold: 1
-                  timeoutSeconds: 1
-        EOM
-
-        cat $deploymentFile | kubectl apply -f -
-
-    - name: Apply ScaledObject
-      shell: bash
-      run: |
-        scaledObjectFile=scaledobject.yaml
-
-        cat > $deploymentFile <<- EOM
-        apiVersion: keda.sh/v1alpha1
-        kind: ScaledObject
-        metadata:
-          name: ${{ inputs.functionAppName }}-scaledobject
-          namespace: ${{ inputs.functionAppNamespace }}
-        spec:
-          scaleTargetRef:
-            name: ${{ inputs.functionAppName }}
-          cooldownPeriod: 30
-          pollingInterval: 5
-          triggers:
-            - type: external
-              metadata:
-                scalerAddress: durabletask-azurestorage-scaler.keda:4370
-                connection: ${{ env.AzuriteConnectionString }}
-                maxActivitiesPerWorker: ${{ inputs.maxActivitiesPerWorker }}
-                maxOrchestrationsPerWorker: 1
-                taskHubName: ${{ inputs.taskHubName }}
-        EOM
-
-        cat $scaledObjectFile | kubectl apply -f -
+      run: helm install \
+        -n ${{ inputs.functionAppNamespace }} \
+        --create-namespace \
+        --set image.repository=example-function-app \
+        --set image.tag=${{ github.run_id }} \
+        --set taskHub.name=${{ inputs.taskHubName }} \
+        --set taskHub.maxActivitiesPerWorker=${{ inputs.maxActivitiesPerWorker }} \
+        ${{ inputs.functionAppName }} \
+        ./charts/example-function-app
 
     - name: Set Test Options
       shell: bash
@@ -175,13 +115,9 @@ runs:
           -warnaserror \
           -v normal
 
-    - name: Delete ScaledObject
+    - name: Uninstall Function App Helm Chart
       shell: bash
-      run: kubectl delete scaledobject ${{ inputs.functionAppName }}-scaledobject --namespace ${{ inputs.functionAppNamespace }}
-
-    - name: Delete Function App Deployment
-      shell: bash
-      run: kubectl delete deployment ${{ inputs.functionAppName }} --namespace ${{ inputs.functionAppNamespace }}
+      run: helm uninstall -n ${{ inputs.functionAppNamespace }} ${{ inputs.functionAppName }}
 
     - name: Uninstall Scaler Helm Chart
       shell: bash
