--- a/charts/azurite/templates/01-deployment.yaml
+++ b/charts/azurite/templates/01-deployment.yaml
@@ -13,7 +13,7 @@ spec:
   selector:
     matchLabels:
       app: {{ template "azurite.fullname" . }}
-  replicas: {{ .Values.replicaCount}}
+  replicas: {{ .Values.replicaCount }}
   {{- with .Values.upgradeStrategy }}
   strategy:
     {{- toYaml . | nindent 4 }}
@@ -35,6 +35,10 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          {{- with .Values.podSecurityContext }}
+          securityContext:
+            {{- toYaml | nindent 12 }}
+          {{- end }}
           command:
             - azurite
             - -l
