--- a/charts/durabletask-azurestorage-scaler/templates/01-serviceaccount.yaml
+++ b/charts/durabletask-azurestorage-scaler/templates/01-serviceaccount.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
-    app.kubernetes.io/name: name: {{ template "durabletask-azurestorage-scaler.serviceAccountName" . }}
+    app.kubernetes.io/name: {{ template "durabletask-azurestorage-scaler.serviceAccountName" . }}
     {{- if .Values.podIdentity.azureWorkload.enabled }}
     azure.workload.identity/use: "true"
     {{- end }}
