--- a/.github/actions/integration-test/action.yml
+++ b/.github/actions/integration-test/action.yml
@@ -36,39 +36,39 @@ runs:
     - name: Setup dotnet
       uses: actions/setup-dotnet@v3
 
-    - name: Install Kind
+    - name: Build Scaler Image
       shell: bash
-      run: go install sigs.k8s.io/kind@latest
+      run: docker build -f "./src/Keda.Scaler.DurableTask.AzureStorage/Dockerfile" -t "durabletask-azurestorage-scaler:${{ github.run_id }}" .
+
+    - name: Build Function App Image
+      shell: bash
+      run: docker build -f "./tests/Keda.Scaler.WebJobs.DurableFunctions.Examples/Dockerfile" -t "example-function-app:${{ github.run_id }}" .
 
     - name: Create Kind Cluster
       shell: bash
       run: |
+        go install sigs.k8s.io/kind@latest
         kind create cluster --name integration
+        kind load docker-image "durabletask-azurestorage-scaler:${{ github.run_id }}" "example-function-app:${{ github.run_id }}" --name integration
         kubectl config use-context kind-integration
-
-    - name: Build Scaler Image
-      shell: bash
-      run: |
-        docker build -f "./src/Keda.Scaler.DurableTask.AzureStorage/Dockerfile" -t "durabletask-azurestorage-scaler:${{ github.run_id }}" .
-        kind load docker-image "durabletask-azurestorage-scaler:${{ github.run_id }}"
-
-    - name: Build Function App Image
-      shell: bash
-      run: |
-        docker build -f "./tests/Keda.Scaler.WebJobs.DurableFunctions.Examples/Dockerfile" -t "example-function-app:${{ github.run_id }}" .
-        kind load docker-image "example-function-app:${{ github.run_id }}"
 
     - name: Install KEDA
       shell: bash
       run: |
         helm repo add kedacore https://kedacore.github.io/charts
         helm repo update
-        helm install -n keda --create-namespace keda kedacore/keda --namespace keda
+        helm install \
+        -n keda \
+        --create-namespace \
+        --wait \
+        --timeout 2m \
+        keda \
+        kedacore/keda
 
     - name: Install Azurite Helm Chart
       shell: bash
       run: |
-        helm install -n azure --create-namespace azurite ./charts/azurite
+        helm install -n azure --create-namespace --wait --timeout 30s azurite ./charts/azurite
         echo "AzuriteConnectionString=DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://azurite.azure:10000/devstoreaccount1;QueueEndpoint=http://azurite.azure:10001/devstoreaccount1;TableEndpoint=http://azurite.azure:10002/devstoreaccount1;" >> $GITHUB_ENV
 
     - name: Install Scaler Helm Chart
@@ -78,6 +78,8 @@ runs:
         --create-namespace \
         --set image.repository=durabletask-azurestorage-scaler \
         --set image.tag=${{ github.run_id }} \
+        --wait \
+        --timeout 30s \
         dtfx-scaler \
         ./charts/durabletask-azurestorage-scaler
 
