--- a/charts/durabletask-azurestorage-scaler/templates/02-deployment.yaml
+++ b/charts/durabletask-azurestorage-scaler/templates/02-deployment.yaml
@@ -60,23 +60,27 @@ spec:
       automountServiceAccountToken: true
       {{- with .Values.podSecurityContext }}
       securityContext:
-        {{- toYaml | nindent 8 }}
+        {{- toYaml . | nindent 8 }}
       {{- end }}
       containers:
         - name: {{ .Chart.Name }}
-          {{- with .Values.podSecurityContext }}
+          {{- with .Values.securityContext }}
           securityContext:
-            {{- toYaml | nindent 12 }}
+            {{- toYaml . | nindent 12 }}
           {{- end }}
           image: "{{ .Values.image.repository }}:{{ default .Chart.AppVersion .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          {{- if .Values.env }}
+          env:
+            {{- toYaml .Values.env | nindent 12 -}}
+          {{- end }}
           ports:
           - name: grpc
             containerPort: {{ .Values.port }}
             protocol: TCP
           {{- with .Values.resources }}
           resources:
-            {{- toYaml | nindent 12 }}
+            {{- toYaml . | nindent 12 }}
           {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
