--- a/src/Keda.Scaler.DurableTask.AzureStorage/appsettings.json
+++ b/src/Keda.Scaler.DurableTask.AzureStorage/appsettings.json
@@ -3,6 +3,14 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "Console": {
+      "FormatterName": "systemd",
+      "FormatterOptions": {
+        "IncludeScopes": true,
+        "TimestampFormat": "HH:mm:ss ",
+        "UseUtcTimestamp": true
+      }
     }
   },
   "AllowedHosts": "*",
