--- a/tests/Keda.Scaler.WebJobs.DurableFunctions.Examples/Keda.Scaler.WebJobs.DurableFunctions.Examples.csproj
+++ b/tests/Keda.Scaler.WebJobs.DurableFunctions.Examples/Keda.Scaler.WebJobs.DurableFunctions.Examples.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.Azure.WebJobs.Core" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.DurableTask" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.DurableTask.Analyzers" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Http" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" PrivateAssets="All" />
   </ItemGroup>
