--- a/charts/azurite/templates/01-deployment.yaml
+++ b/charts/azurite/templates/01-deployment.yaml
@@ -45,6 +45,12 @@ spec:
             - "0.0.0.0"
             - --tableHost
             - "0.0.0.0"
+            - --loose
+            - --disableProductStyleUrl
+            {{- if .Values.debug.enable }}
+            - --debug
+            - /data/debug.log
+            {{- end }}
           {{- with .Values.resources }}
           resources:
             {{- toYaml  .| nindent 12 }}
@@ -55,4 +61,6 @@ spec:
       volumes:
         - name: data
           emptyDir:
+            {{- if .Values.storage.limit }}
             sizeLimit: {{ .Values.storage.limit }}
+            {{- end }}
