--- a/charts/durabletask-azurestorage-scaler/templates/02-deployment.yaml
+++ b/charts/durabletask-azurestorage-scaler/templates/02-deployment.yaml
@@ -76,7 +76,7 @@ spec:
           {{- end }}
           ports:
           - name: grpc
-            containerPort: {{ .Values.port }}
+            containerPort: 8080
             protocol: TCP
           {{- with .Values.resources }}
           resources:
