--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -7,6 +7,7 @@
     <PackageVersion Include="coverlet.collector" Version="3.2.0" />
     <PackageVersion Include="Google.Protobuf" Version="3.21.12" />
     <PackageVersion Include="Grpc.AspNetCore.Server" Version="2.50.0" />
+    <PackageVersion Include="Grpc.AspNetCore.Server.Reflection" Version="2.50.0" />
     <PackageVersion Include="Grpc.Core.Api" Version="2.50.0" />
     <PackageVersion Include="Grpc.Tools" Version="2.51.0" />
     <PackageVersion Include="KubernetesClient" Version="10.0.1" />
