--- a/src/Keda.Scaler.DurableTask.AzureStorage/appsettings.json
+++ b/src/Keda.Scaler.DurableTask.AzureStorage/appsettings.json
@@ -8,7 +8,7 @@
       "FormatterName": "systemd",
       "FormatterOptions": {
         "IncludeScopes": true,
-        "TimestampFormat": "HH:mm:ss ",
+        "TimestampFormat": "O",
         "UseUtcTimestamp": true
       }
     }
