Fix format and update README

--- a/.github/actions/integration-test/action.yml
+++ b/.github/actions/integration-test/action.yml
@@ -65,24 +65,25 @@ runs:
         helm repo add kedacore https://kedacore.github.io/charts
         helm repo update
         helm install \
-        -n keda \
-        --create-namespace \
-        --wait \
-        --timeout 2m \
-        keda \
-        kedacore/keda
+          -n keda \
+          --create-namespace \
+          --wait \
+          --timeout 2m \
+          keda \
+          kedacore/keda
 
     - name: Install Scaler Helm Chart
       shell: bash
-      run: helm install \
-        -n keda \
-        --create-namespace \
-        --set image.repository=durabletask-azurestorage-scaler \
-        --set image.tag=${{ inputs.localTag }} \
-        --wait \
-        --timeout 30s \
-        dtfx-scaler \
-        ./charts/durabletask-azurestorage-scaler
+      run: |
+        helm install \
+          -n keda \
+          --create-namespace \
+          --set image.repository=durabletask-azurestorage-scaler \
+          --set image.tag=${{ inputs.localTag }} \
+          --wait \
+          --timeout 30s \
+          dtfx-scaler \
+          ./charts/durabletask-azurestorage-scaler
 
     - name: Install Azurite Helm Chart
       shell: bash
@@ -90,19 +91,20 @@ runs:
 
     - name: Install Function App Helm Chart
       shell: bash
-      run: helm install \
-        -n ${{ inputs.functionAppNamespace }} \
-        --create-namespace \
-        --set externalScaler.serviceName=dtfx-scaler \
-        --set image.repository=example-function-app \
-        --set image.tag=${{ inputs.localTag }} \
-        --set "taskHub.connectionString=DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://azurite.azure:10000/devstoreaccount1;QueueEndpoint=http://azurite.azure:10001/devstoreaccount1;TableEndpoint=http://azurite.azure:10002/devstoreaccount1;" \
-        --set taskHub.name=${{ inputs.taskHubName }} \
-        --set taskHub.maxActivitiesPerWorker=${{ inputs.maxActivitiesPerWorker }} \
-        --wait \
-        --timeout 30s \
-        ${{ inputs.functionAppName }} \
-        ./charts/example-function-app
+      run: |
+        helm install \
+          -n ${{ inputs.functionAppNamespace }} \
+          --create-namespace \
+          --set externalScaler.serviceName=dtfx-scaler \
+          --set image.repository=example-function-app \
+          --set image.tag=${{ inputs.localTag }} \
+          --set "taskHub.connectionString=DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://azurite.azure:10000/devstoreaccount1;QueueEndpoint=http://azurite.azure:10001/devstoreaccount1;TableEndpoint=http://azurite.azure:10002/devstoreaccount1;" \
+          --set taskHub.name=${{ inputs.taskHubName }} \
+          --set taskHub.maxActivitiesPerWorker=${{ inputs.maxActivitiesPerWorker }} \
+          --wait \
+          --timeout 30s \
+          ${{ inputs.functionAppName }} \
+          ./charts/example-function-app
 
     - name: Set Test Options
       shell: bash
