--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,14 @@ updates:
       timezone: "America/Los_Angeles"
     open-pull-requests-limit: 10
 
+  - package-ecosystem: "docker"
+    directory: "/tests/Keda.Scaler.WebJobs.DurableFunctions.Examples"
+    schedule:
+      interval: "daily"
+      time: "09:00"
+      timezone: "America/Los_Angeles"
+    open-pull-requests-limit: 10
+
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
@@ -40,8 +48,24 @@ updates:
       timezone: "America/Los_Angeles"
     open-pull-requests-limit: 10
 
+  - package-ecosystem: "github-actions"
+    directory: "/actions/integration-test"
+    schedule:
+      interval: "daily"
+      time: "09:00"
+      timezone: "America/Los_Angeles"
+    open-pull-requests-limit: 10
+
   - package-ecosystem: "nuget"
     directory: "/src"
+    schedule:
+      interval: "daily"
+      time: "09:00"
+      timezone: "America/Los_Angeles"
+    open-pull-requests-limit: 10
+
+  - package-ecosystem: "nuget"
+    directory: "/tests"
     schedule:
       interval: "daily"
       time: "09:00"
