--- a/charts/durabletask-azurestorage-scaler/values.yaml
+++ b/charts/durabletask-azurestorage-scaler/values.yaml
@@ -78,8 +78,8 @@ podIdentity:
 
 ## Additional environment variables that will be passed into the scaler pods
 env:
-- name: ASPNETCORE_ENVIRONMENT
-  value: 'Development'
+# - name: ENV_NAME
+#   value: 'ENV-VALUE'
 
 # Security context for the scaler container
 securityContext:
